--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://stellar-sunburst-c0615b.netlify.app/
+baseURL: https://netwithalex.netlify.app/
 languageCode: en-US
 title: NetWithAlex
 theme: PaperMod
