--- a/config.yaml
+++ b/config.yaml
@@ -17,7 +17,7 @@ params:
     - name: Linkedin
       url: "https://www.linkedin.com/in/alexruizs/"
     - name: "email"
-      url: "netwithalex@gmail.com"
+      url: "mailto:netwithalex@gmail.com"
   defaultTheme: auto
   disableThemeToggle: false
   showShareButtons: false
