--- a/config.yaml
+++ b/config.yaml
@@ -55,12 +55,15 @@ menu:
     - name: Home
       url: https://netwithalex.blog
       weight: 1
-    - name: Blogs
-      url: /posts/
+    - name: Archive
+      url: /archives/
       weight: 2
+    - name: Categories
+      url: /category/
+      weight: 3
     - name: About me.
       url: /about/
-      weight: 3
+      weight: 4
     - name: "\U0001F50D"
       url: /search/
-      weight: 4
+      weight: 5
