--- a/config.yaml
+++ b/config.yaml
@@ -3,6 +3,7 @@ defaultContentLanguage: en
 languageCode: en-US
 title: NetWithAlex
 theme: 
+  - plausible-hugo
   - PaperMod
 taxonomies:
   category: category
@@ -14,7 +15,10 @@ params:
       NetWithAlex is my space on the web where I share my passion for networking and technology 🚀. 
       Here you'll find interesting and useful resources explained in a simple way to help you learn clearly and practically.<br><br>
       💬 Do you have questions or ideas? Feel free to reach out—I’d like to hear from you!
-
+  plausible:
+    enable: true
+    domain: netwithalex.blog
+    gitstar: false
   socialIcons: 
     - name: Linkedin
       url: "https://www.linkedin.com/in/alexruizs/"
