--- a/config.yaml
+++ b/config.yaml
@@ -76,9 +76,9 @@ languages:
         - name: Categories
           url: /category/
           weight: 3
-        - name: Resources
-          url: /resources/
-          weight: 3.5
+        # - name: Resources
+        #   url: /resources/
+        #   weight: 3.5
         - name: About me.
           url: /about/
           weight: 4
