--- a/config.yaml
+++ b/config.yaml
@@ -76,9 +76,9 @@ languages:
         - name: Categories
           url: /category/
           weight: 3
-        - name: Course
-          url: /ux2-course/
-          weight: 3.7
+        # - name: Course
+        #   url: /ux2-course/
+        #   weight: 3.7
         - name: About me.
           url: /about/
           weight: 4
